--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,6 +4,6 @@
 	<p><%= portfolio_items.title %></p>
 	<p><%= portfolio_items.subtitle %></p>	
 	<p><%= portfolio_items.body %></p>	
-	<p><%= image_tag portfolio_items.thumb_image %></p>
+	<p><%= image_tag portfolio_items.thumb_image if !portfolio_items.thumb_image.nil? %></p>
 
 <% end %>
