--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,10 +3,10 @@
 <%= link_to "Create new Portfolio", new_portfolio_path %>
 
 <% @portfolio_items.each do |portfolio_items|%>
-	<p><%= portfolio_items.title %></p>
+	<p><%= link_to portfolio_items.title, portfolio_path(portfolio_items) %></p>
 	<p><%= portfolio_items.subtitle %></p>	
 	<p><%= portfolio_items.body %></p>	
 	<p><%= image_tag portfolio_items.thumb_image if !portfolio_items.thumb_image.nil? %></p>
-	<%= link_to "Edit", edit_portfolio_path(portfolio_items.id) %>
+	<%= link_to "Edit", edit_portfolio_path(portfolio_items) %>
 
 <% end %>
