--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -8,5 +8,6 @@
 	<p><%= portfolio_items.body %></p>	
 	<p><%= image_tag portfolio_items.thumb_image if !portfolio_items.thumb_image.nil? %></p>
 	<%= link_to "Edit", edit_portfolio_path(portfolio_items) %>
+	<%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_items), method: :delete, data: { confirm: 'Are you sure?' } %>
 
 <% end %>
