--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -5,3 +5,8 @@
 
 <p><%= @portfolio_items.body %></p>
 
+<h2>Technologies Used:</h2>
+
+<% @portfolio_items.technologies.each do |t| %>
+<p><strong><%= t.name %></strong></p>
+<% end %>
