--- a/app/views/portfolios/angular.html.erb
+++ b/app/views/portfolios/angular.html.erb
@@ -1,13 +1,13 @@
 <h1>Angular Portfolio Items</h1>
 
-<%= link_to "Create new Portfolio", new_portfolio_path %>
+<%= link_to "Create new Portfolio", new_portfolio_path if logged_in?(:site_admin) %>
 
 <% @angular_portfolio_items.each do |portfolio_items|%>
 	<p><%= link_to portfolio_items.title, portfolio_show_path(portfolio_items) %></p>
 	<p><%= portfolio_items.subtitle %></p>	
 	<p><%= portfolio_items.body %></p>	
 	<p><%= image_tag portfolio_items.thumb_image if !portfolio_items.thumb_image.nil? %></p>
-	<%= link_to "Edit", edit_portfolio_path(portfolio_items) %>
-	<%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_items), method: :delete, data: { confirm: 'Are you sure?' } %>
+	<%= link_to "Edit", edit_portfolio_path(portfolio_items) if logged_in?(:site_admin) %>
+	<%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_items), method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
 
 <% end %>
