--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,17 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+  <body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <%= render "shared/application_nav" %>
+      
+      <%= login_helper %>
 
-    <%= render "shared/nav", location: 'top' %>
+      <%= yield %>
     
-    <%= login_helper %>
-    <%= yield %>
-  
-    <%= copyright_generator %>
+      <%= copyright_generator %>
 
-    <%= source_helper("application") %>
-    
+      <%= source_helper("application") %>
+    </div>
   </body>
 </html>
