--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,12 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <%= render "shared/application_nav" %>
       
-      <%= login_helper %>
+      <%= yield %>    
 
-      <%= yield %>
-    
-      <%= copyright_generator %>
+      <%= render 'shared/application_footer' %>
 
       <%= source_helper("application") %>
+
     </div>
   </body>
 </html>
