added map for contact page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,8 +1,8 @@
 <h1>Contact page</h1>
 <p><%= number_to_phone "5555555555" %></p>
-<p><%= number_to_currency "150" %></p>
-<p><%= number_to_percentage "80.4" %></p>
-<p><%= number_with_delimiter "3432649632946234" %></p>
+
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.072281904809!2d77.64008558211987!3d12.903073630250217!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae14979295d171%3A0x10c1db9ac35b3621!2s8th%20A%20Cross%20Rd%2C%20ITI%20Layout%2C%20Hosapalaya%2C%20HSR%20Layout%2C%20Bengaluru%2C%20Karnataka%20560068!5e0!3m2!1sen!2sin!4v1594167989713!5m2!1sen!2sin" width="450" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
 
 
