Implemented nav bar for blog layout

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -14,20 +14,7 @@
   </head>
 
   <body>
-    <!-- Start of Nav -->
-     <div class="blog-masthead">
-      <div class="container">
-        <nav class="nav blog-nav">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="#">New features</a>
-          <a class="nav-link" href="#">Press</a>
-          <a class="nav-link" href="#">New hires</a>
-          <a class="nav-link" href="#">About</a>
-        </nav>
-      </div>
-    </div>
-  <!-- End of Nav -->
-
+    <%= render 'shared/blog_nav' %>
 <!-- start of blog of header -->
    <div class="blog-header">
       <div class="container">
@@ -46,7 +33,6 @@
 <!-- end of container and row elements -->
 
     <!-- code in app>>helpers>>application_helper -->
-    <%= login_helper %>
 
     <%= yield %>
 
