--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -16,26 +16,19 @@
   <body>
     <%= render 'shared/blog_nav' %>
 <!-- start of blog of header -->
-   <div class="blog-header">
+    <div class="blog-header">
       <div class="container">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <h1 class="blog-title">My Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
       </div>
     </div>
 
 <!-- end of blog header -->
 
-<!-- start of container and row elements -->
     <div class="container">
-
       <div class="row">
-
-<!-- end of container and row elements -->
-
-    <!-- code in app>>helpers>>application_helper -->
-
-    <%= yield %>
-
+        <%= yield %>
     <!-- start of sidebar -->
         <div class="col-sm-3 offset-sm-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
@@ -69,7 +62,7 @@
           </div>
         </div><!-- /.blog-sidebar -->
     <!-- end of sidebar -->
-
+      </div>
     <!-- start of footer -->
         <footer class="blog-footer">
           <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
@@ -78,13 +71,10 @@
           </p>
         </footer>
     <!-- start of footer -->
-
-    <%= render "shared/nav", location: 'bottom' %>    
     
-    <%= source_helper("blog") %>
+        <%= source_helper("blog") %>
 
-  </div>
-</div>
-    
+      
+    </div>    
   </body>
 </html>
