--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -6,6 +6,8 @@
 			<%= link_to "Contact", contact_path, class: "nav-link"  %>
 			<%= link_to "Blogs", blogs_path, class: "nav-link"  %>
 			<%= link_to "Portfolios", portfolios_path, class: "nav-link" %>
+    	
+    	<!-- code in app>>helpers>>application_helper -->
     	<%= login_helper "nav-link" %>
 		</nav>
 	</div>
