--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -15,7 +15,7 @@
   <body>    
   <%= render 'shared/portfolio_nav' %>
     <!-- start of mast head -->
-    <%= render 'shared/portfolio_masthead' %>
+    <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
     <!-- end of mast head -->
     
     <%= yield %>
