--- a/app/views/portfolios/edit.html.erb
+++ b/app/views/portfolios/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit this Portfolio Item</h1>
-
-
-<%=render 'form', portfolio_item: @portfolio_items %>
+<div class="container portfolio-form">
+	<h1>Edit this Portfolio Item</h1>
+	<%=render 'form', portfolio_item: @portfolio_items %>
+</div>
