--- a/app/views/shared/_blog_nav.html.erb
+++ b/app/views/shared/_blog_nav.html.erb
@@ -1,11 +1,8 @@
 <div class="blog-masthead">
 	<div class="container">
 		<nav class="nav blog-nav">
-		  <%= link_to "Home", root_path, class: "nav-link"  %>
-			<%= link_to "About me", about_me_path, class: "nav-link"  %>
-			<%= link_to "Contact", contact_path, class: "nav-link"  %>
-			<%= link_to "Blogs", blogs_path, class: "nav-link"  %>
-			<%= link_to "Portfolios", portfolios_path, class: "nav-link" %>
+      <%= nav_helper 'nav-link', 'span' %>
+
     	
     	<!-- code in app>>helpers>>application_helper -->
     	<%= login_helper "nav-link" %>
