--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -8,18 +8,19 @@
       <div class="col-sm-4 py-4">
         <h4 class="text-white">Explore</h4>
         <ul class="list-unstyled">
-          <%= nav_helper 'text-white', 'li' %>   
+          <%= nav_helper 'text-white', 'li' %>
           <li><%= login_helper 'text-white' %></li>
         </ul>
       </div>
     </div>
   </div>
 </div>
-<div class="navbar navbar-inverse bg-inverse">
+
+<div class="navbar navbar-inverse bg-inverse portfolio-nav">
   <div class="container d-flex justify-content-between">
     <a href="#" class="navbar-brand">Rajkumar Das</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   </div>
-</div>
+</div>l
