--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "jquery-ui";
 
 body {
   min-height: 75rem; /* Can be removed; just added for demo purposes */
@@ -63,8 +64,4 @@ footer p {
 
 .portfolio-form {
   padding: 20px;
-}
-
-.portfolio-nav {
-  background: black;
 }
