--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,11 @@
-<h1>About Page</h1>
-<p>Find me in app/views/pages/abou.html.erb</p>
+<h1>About Me</h1>
+<hr>
+<div class="row">
+ <div class="col-md-4">
+ 	<%= image_tag "PIC.png", width: 300, alt: "Profile Image" %>
+ </div>
+ <div class="col-md-8">
+ 	<p>Description about me</p>
+ </div>
+</div>
 
