--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -10,6 +10,16 @@
           <%= f.label :subtitle %>
           <%= f.text_area :subtitle, class: 'form-control' %>
         </div>
+
+        <div class="form-group">
+          <%= f.file_field :main_image %>
+        </div>
+
+        <div class="form-group">
+          <%= f.file_field :thumb_image %>
+          
+        </div>
+
     </div>
     <div class="col-md-6">
       <div class="form-group">
@@ -23,17 +33,17 @@
   <div class="col-md-12">
 
     <h2>Technologies Used</h2>
-      <div>
-        <%= f.fields_for :technologies do |technology_form| %>
-          <div class="form-group">
-            <%= technology_form.label :name %>
-            <%= technology_form.text_field :name, class: 'form-control' %>
-          </div>
-        <% end %>
-      </div>
+    <div>
+      <%= f.fields_for :technologies do |technology_form| %>
+        <div class="form-group">
+          <%= technology_form.label :name %>
+          <%= technology_form.text_field :name, class: 'form-control' %>
+        </div>
+      <% end %>
+    </div>
 
-      <div class="form-group">
-        <%= f.submit 'Save Portfolio Item', class: 'btn btn-primary btn-block' %>
-      </div>
+    <div class="form-group">
+      <%= f.submit 'Save Portfolio Item', class: 'btn btn-primary btn-block' %>
+    </div>
   </div>
   <% end %>
