--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-7">
-			<%= image_tag @portfolio_items.main_image %>
+			<%= image_tag @portfolio_items.main_image.url, width: '100%' %>
 			
 		</div>
 		<div class="col-md-5">
