--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container portfolio-container">
 	<div class="row">
 		<div class="col-md-7">
 			<%= image_tag @portfolio_items.main_image.url, width: '100%' %>
