Updated file upload forms and refactored placeholder functionality into views

--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,5 +1,5 @@
 <div class="card">
-	<%= image_tag portfolio_item.thumb_image.url if !portfolio_item.thumb_image.nil? %>
+	<%= image_tag portfolio_img(portfolio_item.thumb_image.url, 'type'), width: '100%', height: '100%' %>
   <p class="card-text">
   	<span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span><%= portfolio_item.subtitle %>
   </p>
