--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="form-group">
     <%= form.label :title %>
-    <%= form.text_field :title, class: 'form-control' %>
+    <%= form.text_field :title, class: 'form-control', placeholder: "Enter Blog's Title" %>
   </div>
 
   <div class="form-group">
     <%= form.label :body %>
-    <%= form.text_area :body, class: 'form-control', rows: 15 %>
+    <%= form.text_area :body, class: 'form-control', rows: 15, placeholder: "Enter Blog's content" %>
   </div>
 
   <div class="form-group">
