--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -34,16 +34,19 @@
 
   <hr>
   <div class="col-md-12">
-
     <h2>Technologies Used</h2>
     <div>
       <%= f.fields_for :technologies do |technology_form| %>
-        <div class="form-group">
-          <%= technology_form.label :name %>
-          <%= technology_form.text_field :name, class: 'form-control' %>
-        </div>
+        <%= render 'technology_fields', f: technology_form %>
       <% end %>
+      <div class="links">
+        <%= link_to_add_association 'Add technology', f, :technologies %>
+      </div>
+      
+
     </div>
+    
+
 
     <div class="form-group">
       <%= f.submit 'Save Portfolio Item', class: 'btn btn-primary btn-block' %>
