--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -16,12 +16,18 @@ body {
   color: #555;
 }
 
-h1, .h1,
-h2, .h2,
-h3, .h3,
-h4, .h4,
-h5, .h5,
-h6, .h6 {
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   color: #333;
@@ -44,8 +50,8 @@ h6, .h6 {
 .blog-masthead {
   margin-bottom: 3rem;
   background-color: #428bca;
-  -webkit-box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
-          box-shadow: inset 0 -.1rem .25rem rgba(0,0,0,.1);
+  -webkit-box-shadow: inset 0 -0.1rem 0.25rem rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 -0.1rem 0.25rem rgba(0, 0, 0, 0.1);
 }
 
 /* Nav links */
@@ -55,6 +61,7 @@ h6, .h6 {
   font-weight: 500;
   color: #cdddeb;
 }
+
 .nav-link:hover,
 .nav-link:focus {
   color: #fff;
@@ -65,18 +72,19 @@ h6, .h6 {
 .nav-link.active {
   color: #fff;
 }
-.nav-link.active:after {
+
+.nav-link.active::after {
   position: absolute;
   bottom: 0;
   left: 50%;
   width: 0;
   height: 0;
-  margin-left: -.3rem;
+  margin-left: -0.3rem;
   vertical-align: middle;
   content: "";
-  border-right: .3rem solid transparent;
-  border-bottom: .3rem solid;
-  border-left: .3rem solid transparent;
+  border-right: 0.3rem solid transparent;
+  border-bottom: 0.3rem solid;
+  border-left: 0.3rem solid transparent;
 }
 
 
@@ -87,13 +95,15 @@ h6, .h6 {
 .blog-header {
   padding-bottom: 1.25rem;
   margin-bottom: 2rem;
-  border-bottom: .05rem solid #eee;
+  border-bottom: 0.05rem solid #eee;
 }
+
 .blog-title {
   margin-bottom: 0;
   font-size: 2rem;
   font-weight: normal;
 }
+
 .blog-description {
   font-size: 1.1rem;
   color: #999;
@@ -113,13 +123,16 @@ h6, .h6 {
 /* Sidebar modules for boxing content */
 .sidebar-module {
   padding: 1rem;
-  /*margin: 0 -1rem 1rem;*/
+
+  /* margin: 0 -1rem 1rem; */
 }
+
 .sidebar-module-inset {
   padding: 1rem;
   background-color: #f5f5f5;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 }
+
 .sidebar-module-inset p:last-child,
 .sidebar-module-inset ul:last-child,
 .sidebar-module-inset ol:last-child {
@@ -131,6 +144,7 @@ h6, .h6 {
 .blog-pagination {
   margin-bottom: 4rem;
 }
+
 .blog-pagination > .btn {
   border-radius: 2rem;
 }
@@ -143,10 +157,12 @@ h6, .h6 {
 .blog-post {
   margin-bottom: 4rem;
 }
+
 .blog-post-title {
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
   font-size: 2.5rem;
 }
+
 .blog-post-meta {
   margin-bottom: 1.25rem;
   color: #999;
@@ -162,8 +178,9 @@ h6, .h6 {
   color: #999;
   text-align: center;
   background-color: #f9f9f9;
-  border-top: .05rem solid #e5e5e5;
+  border-top: 0.05rem solid #e5e5e5;
 }
+
 .blog-footer p:last-child {
   margin-bottom: 0;
 }
@@ -173,5 +190,5 @@ h6, .h6 {
  */
 
 .social-links li {
-  font-size: 2.5em
+  font-size: 2.5em;
 }
