Add add technology option on Portfolio

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,6 +1,7 @@
 <div class="album text-muted">
   <div class="container">
-    <div class="row sortable">
+    <%= link_to "Add new Portfolio", new_portfolio_path if logged_in?(:site_admin) %>
+	  <div class="row sortable">
 			<%= render partial: 'portfolio_item', collection: @portfolio_items %>
 		</div>
 	</div>
