--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -2,24 +2,24 @@
 	<div class="row">
 		<div class="col-md-7">
 			<%= image_tag portfolio_img(@portfolio_items.main_image.url, 'type'), width: '100%' %>
-			
 		</div>
 		<div class="col-md-5">
 			<h1><%= @portfolio_items.title %></h1>
-
 			<hr>
-
 			<em><%= @portfolio_items.subtitle %></em>
-
 			<p><%= @portfolio_items.body %></p>
-
 			<hr>
-
 			<h3>Technologies Used:</h2>
 
 			<% @portfolio_items.technologies.each do |t| %>
 				<p><strong><%= t.name %></strong></p>
-			<% end %>
+      <% end %>
+      
+      <% if logged_in?(:site_admin) %>
+      <div class="">
+        <%= link_to "Edit Item", edit_portfolio_path(@portfolio_items), class: 'btn btn-warning' %>
+      </div>
+      <% end %>
 		</div>
 	</div>
 </div>
