updated Homepage, Contact and About me page

--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -18,6 +18,7 @@
       <% if logged_in?(:site_admin) %>
       <div class="">
         <%= link_to "Edit Item", edit_portfolio_path(@portfolio_items), class: 'btn btn-warning' %>
+        <%= link_to "Delete Item", @portfolio_items, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'%>
       </div>
       <% end %>
 		</div>
