--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "bootstrap/scss/bootstrap";
+@import "gritter";
 
 /*
  * Globals
@@ -147,7 +148,7 @@ body {
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: image-url('home_bg.png') no-repeat;
+  background: image-url('home_bg1.jpg') no-repeat;
   background-size: cover;
 }
 
