--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,21 +13,13 @@
 
   <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      <%= 
-        video_tag(
-          'HardDrivePhotojpeg.mp4', id: 'background',
-          autoplay: true,
-          loop: true,
-          muted: true,
-          poster: 'home_bg.png'
-          )
-      %>        
+      <div id="background"></div>
       <%= render "shared/application_nav" %>
       
       <%= yield %>    
 
       <%= render 'shared/application_footer' %>
-
+      <%= render 'shared/alerts' %>
       <%= source_helper("application") %>
 
     </div>
