--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,8 +1,16 @@
-<h1>Contact page</h1>
-<p><%= number_to_phone "5555555555" %></p>
+<h1>Would you like to work together?</h1><br><br>
 
+<div class="row mb-2">
+  <div class="col-md-6">
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.072281904809!2d77.64008558211987!3d12.903073630250217!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae14979295d171%3A0x10c1db9ac35b3621!2s8th%20A%20Cross%20Rd%2C%20ITI%20Layout%2C%20Hosapalaya%2C%20HSR%20Layout%2C%20Bengaluru%2C%20Karnataka%20560068!5e0!3m2!1sen!2sin!4v1594167989713!5m2!1sen!2sin" width="450" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <h3 class="mb-0">Address</h3>
+    <p class="mb-auto">8th Main, 2nd Main, ITI Layout, Yellukunte, HSR Layout, Bengaluru, Karnataka, India-560068</p><br>
+    <h3 class="mb-0">Phone</h3> 
+    <p class="card-text mb-auto"><%= number_to_phone "+91-8080851881" %></p><br>
+    <%= mail_to 'rajkumardas2701@gmail.com', "Email Me", class: "btn btn-lg btn-secondary" %>
 
-
-
+  </div>
+  <div class="col-md-4">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3889.072281904809!2d77.64008558211987!3d12.903073630250217!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae14979295d171%3A0x10c1db9ac35b3621!2s8th%20A%20Cross%20Rd%2C%20ITI%20Layout%2C%20Hosapalaya%2C%20HSR%20Layout%2C%20Bengaluru%2C%20Karnataka%20560068!5e0!3m2!1sen!2sin!4v1594167989713!5m2!1sen!2sin" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  </div>
+</div>
