--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="col-sm-3 offset-sm-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
-            <p>A person with Growth Mindset having 6+ years of experience in Unified Communications. Learning Web Development (Ruby, Rails, JS, React, HTML and CSS) and ready to grab new opportunities</p>
+            <p>A person with Growth Mindset having 6+ years of experience in Unified Communications turned into Full Stack Web Developer (Ruby, Rails, JavaScript, React, HTML and CSS) and ready to grab new opportunities</p>
           </div>
 
           <div class="sidebar-module">
