--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -19,7 +19,7 @@
 
   <div class="navbar navbar-dark bg-dark shadow-sm portfolio-nav">
     <div class="container d-flex justify-content-between">
-      <a href="#" class="navbar-brand d-flex align-items-center">Rajkumar Das</a>
+      <a href="/" class="navbar-brand d-flex align-items-center">Rajkumar Das</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
