--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,7 +6,7 @@
  </div>
  <div class="col-md-8">
 	<p>Based on my discussion with professional developers, it appears rare communication with clients throughout the development stage results in a final product that fails to reach the goal sought by the customer and end user.</p>
-	<p>For this reason I decided to utilize a completely different development pattern that foocuses on highly focused communication and transparent design patterns. My goal is to ensure whenever I take on a project not only do I work to craft the application according to the client's specifications, I give daily updates to ensure that the project is aligning properly with the client's goals. The end result is the right product, delivered on time, and on budget.
+	<p>For this reason I decided to utilize a completely different development pattern that focuses on highly focused communication and transparent design patterns. My goal is to ensure whenever I take on a project not only do I work to craft the application according to the client's specifications, I give daily updates to ensure that the project is aligning properly with the client's goals. The end result is the right product, delivered on time, and on budget.
 	</p>
  </div>
 </div>
