--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,6 +1,7 @@
 <div class="card">
 	<%= image_tag portfolio_img(portfolio_item.thumb_image.url, 'type'), width: '100%', height: '100%' %>
   <p class="card-text">
-  	<span><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span><%= portfolio_item.subtitle %>
+    <span class="portfolio-title"><%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %></span>&nbsp
+    <span class="portfolio-title"><%= portfolio_item.subtitle %></span>
   </p>
 </div>
