--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,27 +1,34 @@
 <%= form_for(@portfolio_items) do |f| %>
   <div class="row">
     <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :title %>
-          <%= f.text_field :title, class: 'form-control' %>
-        </div>
+      <div class="form-group">
+        <%= f.label :title %>
+        <%= f.text_field :title, class: 'form-control' %>
+      </div>
 
-        <div class="form-group">
-          <%= f.label :subtitle %>
-          <%= f.text_area :subtitle, class: 'form-control' %>
-        </div>
+      <div class="form-group">
+        <%= f.label :subtitle %>
+        <%= f.text_area :subtitle, class: 'form-control' %>
+      </div>
 
-        <div class="form-group">
-          <label class="btn btn-primary">
-            Upload a Main Image file <%= f.file_field :main_image, style: 'display: none;' %>
-          </label>
-        </div>
+      <div class="form-group">
+        <%= f.label :github_link %>
+        <%= f.text_field :github_link, class: 'form-control' %>
+      </div>
 
-        <div class="form-group">
-          <label class="btn btn-primary">
-            Upload a Thumb Image file <%= f.file_field :thumb_image, style: 'display: none;' %>
-          </label>
-        </div>
+      <div class="form-group">
+        <%= f.label :demo_link %>
+        <%= f.text_field :demo_link, class: 'form-control' %>
+      </div>
+
+      <div class="form-group">
+        <label class="btn btn-primary">
+          Upload a Main Image file <%= f.file_field :main_image, style: 'display: none;' %>
+        </label>
+        <label class="btn btn-primary">
+          Upload a Thumb Image file <%= f.file_field :thumb_image, style: 'display: none;' %>
+        </label>
+      </div>
 
     </div>
     <div class="col-md-6">
