--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -20,7 +20,12 @@
         <%= link_to "Edit Item", edit_portfolio_path(@portfolio_items), class: 'btn btn-warning' %>
         <%= link_to "Delete Item", @portfolio_items, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'%>
       </div>
+      <% else %>
+        <div class="d-flex flex-row">
+          <%= link_to "Link to GitHub", @portfolio_items.github_link, class: "btn btn-primary", target: "_blank" %> &nbsp <%= link_to "Live Demo", @portfolio_items.demo_link, class: "btn btn-primary", target: "_blank" %>
+        </div>
       <% end %>
+      
 		</div>
 	</div>
 </div>
