Updated Background Image for Home Page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -144,7 +144,7 @@ body {
   z-index: -100;
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background-image: url("home_bg1.jpg");
+  background-image: url("https://mocah.org/uploads/posts/4514084-computer-keyboards.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
