Added description on Portfolio page

--- a/app/views/shared/_portfolio_masthead.html.erb
+++ b/app/views/shared/_portfolio_masthead.html.erb
@@ -1,7 +1,7 @@
 <section class="jumbotron text-center">
   <div class="container">
     <h1 class="jumbotron-heading">My Portfolio</h1>
-    <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks dont simply skip over it entirely.</p>
+    <p class="lead text-muted">Built some of the projects below while I was pursuing my Web Development course in Microverse. I enjoyed building each and every project but the Capstones were the actual learning which had to be built individually within specified time frame.</p>
     <p>
       <%= link_to 'Find Out More About Me', about_me_path, class: 'btn btn-primary' %>
       <%= link_to 'My Blog', blogs_path, class: 'btn btn-secondary' %>
