--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -4,7 +4,9 @@
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
-          <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+          <p class="text-muted">Based on my discussion with professional developers, it appears rare communication with clients throughout the development stage results in a final product that fails to reach the goal sought by the customer and end user. <br />
+          For this reason I decided to utilize a completely different development pattern that focuses on highly focused communication and transparent design patterns. My goal is to ensure whenever I take on a project not only do I work to craft the application according to the client's specifications, I give daily updates to ensure that the project is aligning properly with the client's goals. The end result is the right product, delivered on time, and on budget.
+          </p>
         </div>
         <div class="col-sm-4 col-md-4 py-4 explore-mr">
           <h4 class="text-white">Explore</h4>
