--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,7 +6,7 @@
         </div>
 
         <div class="col-md-11">
-          <%= comment.content %>
+          <%= comment.content %>`
         </div>
       </div>
     </div> 
